--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ header {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
+    ul, p {
+        margin-top: 10px;
+    }
 }
 
 /* Ensure Layout is Always 1 Column */
@@ -60,8 +64,9 @@ footer {
     background: #333;
     color: white;
     margin-top: 20px;
-    a {
-        color: inherit;
-        /* text-decoration: none; Optional: removes underline */
-    }
+}
+
+a {
+    color: inherit;
+    /* text-decoration: none; Optional: removes underline */
 }
